[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
base32 = "0.5.1"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
crossterm = "0.29.0"
dashmap = "6.1.0"
futures = "0.3.31"
hkdf = "0.12.4"
indicatif = "0.18.0"
lazy_static = "1.5.0"
libc = "0.2.177"
nix = { version = "0.30.1", features = ["socket"] }
once_cell = "1.21.3"
pbkdf2 = "0.12.2"
rand = "0.8"
rand_chacha = "0.9.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
socket2 = "0.6.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tokio-utils = "0.1.2"
totp-rs = "5.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"

[[bin]]
name = "chat"
path = "src/main.rs"

